# rasterizer

./: Cargo.toml
examples/: sample.rs
src/: cube.rs  defs.rs  entity.rs  framebuffer.rs  indexed_buffer.rs  input.rs  lib.rs  main.rs  mesh.rs  plane.rs  renderer.rs  sdl_helper.rs  texture.rs  transform.rs  transformers.rs
