[package]
name = "rasterizer"
version = "0.1.0"
authors = ["Ali Milhim <ali.milhim@powtoon.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 ={version= "0.33" , features=["bundled" ,"static-link"] }
cgmath = "0.17.0"