[package]
name = "rasterizer"
version = "0.1.0"
authors = ["Ali Milhim"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sdl2 ={version= "0.33" , features=["bundled" ,"static-link"] }
cgmath ={version= "0.17.0",features=["swizzle"]}
rand = "0.7.3"
tobj = "2.0.2"